--- a/style.css
+++ b/style.css
@@ -16,7 +16,12 @@ header {
     
 
 }
+.logo {
+    padding-top: 10px;
 
+    height: 40px;
+ 
+}
 
 
 
@@ -105,22 +110,28 @@ h1 {
 
 
 
-
+.container__botao {
+    background-color: rgb(80, 80, 80);
+    border-radius: 5px;
+    padding: 0.5em;
+    color: #FFF;
+}
 
 .chamada-Produto {
     display: flex;
     overflow-x: auto;
     gap: 10px;
+    
 }
 
 .categoria {
+    padding-top: 50px;
     padding-left: 20px;
     padding-right: 20px;
     margin-top: 20px;
 }
 
 .chamada-Produto img {
-    border: 1px solid #646464;
     opacity: 0.5;
     height: 150px;
 }
@@ -140,15 +151,44 @@ p {
 }
 
 .chamada-Categoria {
+    color: rgb(42, 122, 228);
+    font-size: 20px;
+    padding-bottom: 20px;
     border: 10px solid #ffffff00;
     padding-inline-start: 10px;
 }
 
+/* Works on Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: rgb(42, 122, 228) rgb(255, 255, 255);
+  }
+  
+  /* Works on Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: rgb(255, 255, 255);
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: rgb(42, 122, 228);
+    border-radius: 20px;
+    border: 3px solid rgb(255, 255, 255);
+  }
 
-
-
-
-
+.preço {
+    color: green;
+}
+.legenda {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+    -webkit-box-orient: vertical; 
+    color: rgb(0, 65, 150);
+}
 
 
 
@@ -165,7 +205,9 @@ p {
     padding-right: 20px;
     padding-top: 50px;
 }
-
+.Ajuda p {
+    font-size: 15px;
+}
 
 
 
@@ -174,28 +216,17 @@ p {
 
 .Rodape {
     text-align: center;
-    background-color:  rgb(240, 240, 240);
-    color:  rgb(100, 100, 100);
+    background-color:  rgb(37, 37, 39);
+    color:  rgb(255, 255, 255);
     font-size: .75rem;
     padding-top: 10px;
     padding-bottom: 20px;
     line-height: 0.7;
     font-size: 15px;
+
 }
 
 article {
     padding-top: 7px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
